fix error messages and add dark mode text sharing

--- a/style.css
+++ b/style.css
@@ -94,28 +94,32 @@ body {
 }
 
 .message-container {
+  position: fixed;
+  top: 20vh;
+  left: 50%;
+  z-index: 1;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
 .message {
   background-color: var(--secondary);
-  text-align: center;
-  top: 20%;
-  left: 50%;
-  position: absolute;
-  z-index: 4;
+  color: var(--primary);
   transform: translate(-50%, -50%);
-  width: 70%;
-  padding: 2rem 1rem;
+  padding: 0.75em;
   border-radius: 0.5rem;
+  font-size: 1.8rem;
+  transition: opacity 0.5s ease-in-out;
+  margin-bottom: 0.2rem;
 }
 
-.message-text {
-  color: var(--primary);
-  font-size: 1.8rem;
-  font-weight: 700;
+.message:last-child {
+  margin-bottom: 0;
+}
+
+.message.invisible {
+  opacity: 0;
 }
 
 .board__row {
